# decat

./: README.md  brotli.cc  brotli.hh  bzip2.cc  bzip2.hh  decat.cc  gr  gzip.cc  gzip.hh  meson.build  mk  process.cc  process.hh  read.cc  read.hh  xz.cc  xz.hh
